test/visibility/import/multipleModules/privateImport.good
privateImport.chpl:14: In function 'main':
privateImport.chpl:15: error: 'x' undeclared (first use this function)
